table getting there

--- a/latex/hardware.tex
+++ b/latex/hardware.tex
@@ -40,7 +40,7 @@ Itasca is an HPLinux cluster with 1,134HP ProLiant blade servers, each with two-
 %NVidia released an architecture code named "Fermi" in 2010 \cite{Fermi2009}. The hardware supports many features of interest, the most important being 8x faster double precision than the older Tesla C1060 (GT200 architecture). It will also allow for concurrent kernel execution (for up to 16 small kernels) making it easier to keep the GPU saturated with computation. Table~\ref{tbl:fermi_compare} considers some of the more monumental differences between the Fermi and GT200 architectures.
 %\begin{table}[t]
 %\begin{center}
-%\begin{tabular}{D|C|C|}
+%\begin{tabular}{D|C{1in}|C{1in}|}
 % & Fermi & GT200 \\ 
 % \hline\hline
 % \# of concurrent kernels & 16 & 1 \\
@@ -94,7 +94,7 @@ Itasca is an HPLinux cluster with 1,134HP ProLiant blade servers, each with two-
 %
 %\begin{table}[t]
 %\begin{center}
-%\begin{tabular}{|C|C|c|C|C|}
+%\begin{tabular}{|C{1in}|C{1in}|c|C{1in}|C{1in}|}
 %\# of Nodes & \# GPUs per Node & GPU Name & Global Device Memory Size & Compute Capability \\
 %\hline
 %16 & 1 & Tesla C1060 & 4 GB & 1.3 \\
