--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -125,7 +125,7 @@ interpolation type.  The final row of Table~\ref{tbl:rbfcolloctypes} considers l
 
 \begin{table}[t]
    \centering
-   \begin{tabular}{E | C | C | C | c | } % Column formatting, @{} suppresses leading/trailing space
+   \begin{tabular}{E | C{1in}| C{1in}| C{1in}| c | } % Column formatting, @{} suppresses leading/trailing space
    Interpolation Type & Dense/Sparse $A$ & Dim($A$) ($N_S \ll N$) &  \# of $A^{-1}$  & RBF Support \\ 
    \hline \hline
    Global & Dense & $N \times N$ & 1 & Global \\
