--- a/latex/rbffd_methods_content/rbf_table.tex
+++ b/latex/rbffd_methods_content/rbf_table.tex
@@ -2,7 +2,7 @@
 \newcommand{\rbf}[4]{#1 & #2 & #3 & #4}
 \begin{table}[t]
    \centering
-   \begin{tabular}{L | C | c |C| } % Column formatting, @{} suppresses leading/trailing space
+   \begin{tabular}{L{1.5in} | C{1.0in} | c |C{1.0in}| } % Column formatting, @{} suppresses leading/trailing space
    \rbf{Name}{Abbrev.}{Formula}{Order ($m$)} \\
    \hline\hline
    \rbf{Multiquadric}{MQ}{$\sqrt{1+(\varepsilon r)^2}$}{1} \\
