--- a/latex/rbffd_methods_content/rbftype_table.tex
+++ b/latex/rbffd_methods_content/rbftype_table.tex
@@ -23,7 +23,7 @@
 %\begin{sidewaystable}
 \begin{table}[t]
 \begin{center}
-	\begin{tabular}{@{} R|C|C|C|}
+	\begin{tabular}{@{} R{1.5in}|C{1.0in}|C{1.0in}|C{1.0in}|}
 		& \multicolumn{3}{c|}{RBF Interpolation Type} \\
 		\hline
 		Method & Global (Dense) & Compact (Sparse Global) & Local \\
