--- a/latex/macros/table_macros.tex
+++ b/latex/macros/table_macros.tex
@@ -1,8 +1,13 @@
 
 \usepackage{tabularx} 
-\newcolumntype{C}{>{\centering\arraybackslash}b{1in}}
-\newcolumntype{L}{>{\flushleft\arraybackslash}b{1.5in}}
-\newcolumntype{R}{>{\flushright\arraybackslash}b{1.5in}}
+
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+
+%\newcolumntype{C}{>{\centering\arraybackslash}b{1in}}
+%\newcolumntype{L}{>{\flushleft\arraybackslash}b{1.5in}}
+%\newcolumntype{R}{>{\flushright\arraybackslash}b{1.5in}}
 \newcolumntype{D}{>{\flushright\arraybackslash}b{2.0in}}
 \newcolumntype{E}{>{\flushright\arraybackslash}b{1.0in}}
 
