--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -237,7 +237,7 @@ Within this document readers should expect to find the following major contribut
 \begin{enumerate} 
 \item The first ever application of a fixed-grid neighbor query algorithm (popularized by distantly related particle methods) to generate stencils for RBF-FD. 
 \begin{itemize} 
-\item Performance comparison to the RBF community favorite, $k$-D Tree, shows that the lower complexity fixed-grid method is able to achieve up to 2.5x speedup over the alternative on randomly distributed nodes. 
+\item Performance comparison with the RBF community favorite, $k$-D Tree, shows that the lower complexity fixed-grid method is able to achieve up to 2.5x speedup over the former method on randomly distributed nodes. 
 \item The fixed-grid method is also shown to accelerate RBF-FD time-step performance by up to 5x due spatial locality of node information in memory and improved cache effects.
 \end{itemize} 
 \item Integer dilation and bit interleaving are introduced to the RBF community at large to construct a number of space-filling curve variants in 2-D and 3-D. The curves reorder cells of the fixed-grid algorithm on the prospect of additional cache hits for derivative calculations. 
@@ -246,29 +246,31 @@ Within this document readers should expect to find the following major contribut
 \end{itemize} 
 \item The design and tuning of the only known implementation of the RBF-FD method to scale across multiple compute nodes of a supercomputing cluster.
 \begin{itemize} 
-\item Our home-grown implementation divides computation with a Restricted Additive Schwarz (RAS) domain decomposition in a first-of-its-kind application to RBF-FD (note: other RBF methods have already encountered RAS decomposition \cite{Yokota2010}). 
+\item Our home-grown implementation divides computation with a Restricted Additive Schwarz (RAS) domain decomposition in a first-of-its-kind application to RBF-FD. % (note: other RBF methods have already encountered RAS decomposition \cite{Yokota2010}). 
 \item As part of the tuning process described herein, balanced workloads are achieved through the use of the METIS graph partitioning algorithm \cite{Karypis1999}.  
 \item A number of steps are taken to improve communication collectives in the CPU-only implementation. The resulting algorithm splits derivative calculation into two steps and overlaps communication with computation. We observe that up to 80\% of the cost in communication can be hidden in some cases. 
 \item Scaling benchmarks up to 1024 processes (divided into 8 processes per node) and a grid resolution of $N=160^3$ vertices (i.e., 4.1 million) prove that the implementation scales well in both a strong and weak sense. 
 \end{itemize} 
-\item The design and tuning of the only known implementation of RBF-FD to leverage one or more accelerators on a GPU cluster. Also, the only known investigation in the RBF community that targets multiple GPUs (\cite{Cuomo2013} is single-GPU only). 
+\item The design and tuning of the only known single- and multi-GPU implementation of RBF-FD. Also, ours is the only known investigation in the broader RBF community to target multiple GPUs (\cite{Schmidt2009a,Cuomo2013} are single-GPU). 
 \begin{itemize} 
-\item Our first paper (\cite{BolligFlyerErlebacher2012}) introduced a set of custom OpenCL kernels for RBF-FD time-stepping of hyperbolic PDEs with an RK4 scheme. Stability and convergence studies verified both the single- and multi-GPU environment (up to 10 GPUs). 
+\item Our first paper (\cite{BolligFlyerErlebacher2012}) introduced a set of custom OpenCL kernels for RBF-FD time-stepping of hyperbolic PDEs with an explicit RK4 scheme (up to 10 GPUs). 
 \item Here, the performance per GPU is tuned by choosing an alternative sparse matrix representation. The investigation reveals that the Ellpack (ELL) structure provided by the ViennaCL library \cite{Rupp2010} is a great fit for RBF-FD differentiation matrices, with over 4x faster performance than the original compressed-row storage (CSR). %On one GPU (NVidia M2070) our implementation performs at approximately 8 GFLOP/sec. 
-\item The multi-GPU implementation is improved with a novel overlapping algorithm that naturally extends from our distributed CPU optimizations. Non-blocking MPI collectives plus two asynchronous OpenCL queues amortize the costs for data transfer between CPU and GPU, MPI communication, and in some cases a substantial amount of computation well. Iterations with the resulting implementation run an average of 3x faster than the non-overlapping equivalent. %achieves an impressive 88.8 GFLOP/sec on only 32 GPUs (4 per compute node). 
+\item The multi-GPU implementation is extended to a novel overlapping algorithm that naturally derives from our distributed CPU optimizations. Non-blocking MPI collectives plus two asynchronous OpenCL queues amortize the cost of data transfer between CPU and GPU, MPI communication, and in some cases a substantial amount of computation. Iterations of the resulting implementation achieve an average of 3x better strong scaling compared to a non-overlapping equivalent. 
 \end{itemize} 
-\item Verification of our implementation based on the explicit solution of two PDEs
+\end{enumerate}
+Of lesser significance we also: 
+\begin{enumerate}
+\item Verify our explicit solvers against two well studied hyperbolic PDEs (Vortex Roll-up \cite{NairTransport05, NairJablonowski08} and Cosine Bell Advection \cite{JakobChien1995}).
 \begin{itemize} 
-\item Tuned parameters are provided for selecting the RBF support parameter and hyperviscosity scaling as a function of the problem size
-\item Convergence studies demonstrate that hyperviscosity stabilizes the solution 
+\item Convergence studies confirm that hyperviscosity (\cite{Fornberg2011b}) stabilizes solutions.
+\item Tuned parameters are provided for selecting the RBF support parameter and scaling hyperviscosity as a function of the problem size
 \end{itemize}
-\item Implementation of a distributed multi-GPU preconditioned GMRES capable of solving large linear systems produced by stokes equation.
-\item The first preliminary results of RBF-FD running on the Intel Phi Architecture. 
+\item Implement a distributed multi-GPU preconditioned GMRES within ViennaCL for implicit RBF-FD solutions.
 \begin{itemize} 
-\item  design of a manufactured solution for stokes equations on the sphere
-\item 
+\item A divergence-free field is constructed as the manufactured solution for a simplified version of Stokes flow constrained to the unit sphere. 
+\item A CPU-only ILU0 preconditioner is implemented to test impact on GMRES convergence rates 
 \end{itemize}
-
+\item Provide preliminary benchmarks evaluating the performance of RBF-FD on the Intel Phi Architecture. 
 \end{enumerate}
 
 
